quote db2/db2-as-400 data partition column identifier.